# tstidy

./: .gitignore  README.md  pyproject.toml
src/tstidy/: __init__.py  tvh.py
tests/: test_tstidy.py  test_tvh.py
