[tool.poetry]
name = "tstidy"
version = "0.1.1"
description = "move programs from tvheadend to kodi data stores."
authors = ["ccdale <chris.charles.allison+tstidy@gmail.com>"]
readme = "README.md"
packages = [{include = "tstidy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
